--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -344,11 +344,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Print all courses       "
+    "# TODO: Print all courses\n",
+    "cursor = db.my_collection.find()\n",
+    "\n",
+    "for document in cursor:\n",
+    "    pprint(document)"
    ]
   },
   {
@@ -363,19 +367,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m my_json \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m{\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m: \u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMaster Thesis\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39msemester\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m: 3}\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> 2\u001b[0m another_course \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(my_json)\n\u001b[0;32m      3\u001b[0m another_course\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'title': 'Master Thesis', 'semester': 3}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
