--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -70,8 +70,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo in c:\\python311\\lib\\site-packages (4.3.3)\n",
-      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in c:\\python311\\lib\\site-packages (from pymongo) (2.3.0)\n"
+      "Requirement already satisfied: pymongo in c:\\users\\timot\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (4.3.3)\n",
+      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in c:\\users\\timot\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pymongo) (2.3.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 23.1.2\n",
+      "[notice] To update, run: C:\\Users\\timot\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -304,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x1f1fb773d30>"
+       "<pymongo.results.InsertManyResult at 0x21d3e1de3b0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,15 +353,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Print all courses\n",
-    "cursor = db.my_collection.find()\n",
+    "def print_all_courses():\n",
+    "    cursor = db.my_collection.find()\n",
     "\n",
-    "for document in cursor:\n",
-    "    pprint(document)"
+    "    for document in cursor:\n",
+    "        print(document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_all_courses()"
    ]
   },
   {
@@ -367,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +404,7 @@
        "{'title': 'Master Thesis', 'semester': 3}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,20 +427,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x21d3eecb8e0>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: Store `another_course` as another course:"
+    "# TODO: Store `another_course` as another course:\n",
+    "db.courses.insert_one(another_course)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'_id': ObjectId('64873dc67898ea70fa1435a6'),\n",
+      "  'lecturer': {'department': 'Math',\n",
+      "               'name': 'Markus Löcher',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 1,\n",
+      "  'title': 'Data Science'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435a7'),\n",
+      "  'lecturer': {'department': 'Information Systems',\n",
+      "               'name': 'Roland M. Mueller',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 1,\n",
+      "  'title': 'Data Warehousing'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435a8'),\n",
+      "  'lecturer': {'department': 'Information Systems',\n",
+      "               'name': 'Frank Habermann',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 1,\n",
+      "  'title': 'Business Process Management'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435a9'),\n",
+      "  'lecturer': {'department': 'Information Systems',\n",
+      "               'name': 'Sven Pohland',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 1,\n",
+      "  'title': 'Stratigic Issues of IT'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435aa'),\n",
+      "  'lecturer': {'department': 'Math',\n",
+      "               'name': 'Markus Löcher',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 2,\n",
+      "  'title': 'Text, Web and Social Media Analytics Lab'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435ab'),\n",
+      "  'lecturer': {'department': 'Information Systems',\n",
+      "               'name': 'Roland M. Mueller',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 2,\n",
+      "  'title': 'Enterprise Architectures for Big Data'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435ac'),\n",
+      "  'lecturer': {'department': 'Information Systems',\n",
+      "               'name': 'Frank Habermann',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 2,\n",
+      "  'title': 'Business Process Integration Lab'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435ad'),\n",
+      "  'lecturer': {'department': 'Information Systems',\n",
+      "               'name': 'Dennis Uckel',\n",
+      "               'status': 'External'},\n",
+      "  'semester': 2,\n",
+      "  'title': 'IT-Security and Privacy'},\n",
+      " {'_id': ObjectId('64873dc67898ea70fa1435ae'),\n",
+      "  'lecturer': {'department': 'Information Systems',\n",
+      "               'name': 'Marcus Birkenkrahe',\n",
+      "               'status': 'Professor'},\n",
+      "  'semester': 2,\n",
+      "  'title': 'Research Methods'}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Print all courses"
+    "# TODO: Print all courses\n",
+    "pprint(courses)"
    ]
   },
   {
@@ -447,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,15 +551,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5cc57fee6879c205b3f26031\n",
-      "Markus Löcher\n"
+     "ename": "NameError",
+     "evalue": "name 'result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(result[\u001b[39m\"\u001b[39m\u001b[39m_id\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(result[\u001b[39m\"\u001b[39m\u001b[39mlecturer\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'result' is not defined"
      ]
     }
    ],
@@ -847,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.11"
   },
   "varInspector": {
    "cols": {
