--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -313,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x21d3e1de3b0>"
+       "<pymongo.results.InsertManyResult at 0x21d3eecb8b0>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,25 +353,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('648744807898ea70fa1435b9'),\n",
+      " 'lecturer': {'department': 'Math',\n",
+      "              'name': 'Markus Löcher',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 1,\n",
+      " 'title': 'Data Science'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435ba'),\n",
+      " 'lecturer': {'department': 'Information Systems',\n",
+      "              'name': 'Roland M. Mueller',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 1,\n",
+      " 'title': 'Data Warehousing'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435bb'),\n",
+      " 'lecturer': {'department': 'Information Systems',\n",
+      "              'name': 'Frank Habermann',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 1,\n",
+      " 'title': 'Business Process Management'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435bc'),\n",
+      " 'lecturer': {'department': 'Information Systems',\n",
+      "              'name': 'Sven Pohland',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 1,\n",
+      " 'title': 'Stratigic Issues of IT'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435bd'),\n",
+      " 'lecturer': {'department': 'Math',\n",
+      "              'name': 'Markus Löcher',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 2,\n",
+      " 'title': 'Text, Web and Social Media Analytics Lab'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435be'),\n",
+      " 'lecturer': {'department': 'Information Systems',\n",
+      "              'name': 'Roland M. Mueller',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 2,\n",
+      " 'title': 'Enterprise Architectures for Big Data'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435bf'),\n",
+      " 'lecturer': {'department': 'Information Systems',\n",
+      "              'name': 'Frank Habermann',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 2,\n",
+      " 'title': 'Business Process Integration Lab'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435c0'),\n",
+      " 'lecturer': {'department': 'Information Systems',\n",
+      "              'name': 'Dennis Uckel',\n",
+      "              'status': 'External'},\n",
+      " 'semester': 2,\n",
+      " 'title': 'IT-Security and Privacy'}\n",
+      "{'_id': ObjectId('648744807898ea70fa1435c1'),\n",
+      " 'lecturer': {'department': 'Information Systems',\n",
+      "              'name': 'Marcus Birkenkrahe',\n",
+      "              'status': 'Professor'},\n",
+      " 'semester': 2,\n",
+      " 'title': 'Research Methods'}\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Print all courses\n",
-    "def print_all_courses():\n",
-    "    cursor = db.my_collection.find()\n",
+    "all_courses = db.courses.find()\n",
     "\n",
-    "    for document in cursor:\n",
-    "        print(document)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_all_courses()"
+    "for course in all_courses:\n",
+    "    pprint(course)"
    ]
   },
   {
